# Summer14

./: OPENCV(SUMMER-WORK).odt  howto add on github
ar_jitendra __testproject/: CMakeLists.txt  how torun
ar_jitendra __testproject/angle/: aruco_simple(inputimage).cpp  aruco_simple.cpp~
ar_jitendra __testproject/basic/: CMakeLists.txt  aruco_simple.cpp  aruco_simple.cpp~  aruco_simple_video.cpp~  camera.yml
ar_jitendra __testproject/center/: aruco_simple.cpp  aruco_simple_video.cpp
ar_jitendra __testproject/cubebox/: 2014-07-01-182138.avi  aruco_find.cpp~  aruco_simple.cpp~  aruco_simple_video.cpp  howtorun~  readme
ar_jitendra __testproject/relposn/: aruco_simple.cpp~
hsv/contour/: main.cpp  main.cpp~
hsv/drawcontour/: main.cpp
hsv/duplicate/: CMakeLists.txt  main.cpp  main.cpp~
hsv/erddiltd/: CMakeLists.txt  main.cpp~
hsv/green/: main.cpp~
hsv/hsvrange/: main.cpp
hsv/hsvtobinary/: main.cpp  main.cpp~
hsv/rgbtohsv/: main.cpp~
hsv/vid/: main.cpp~
hsv/video/: CMakeLists.txt  main.cpp
hsv/yellow/: main.cpp~
playrstge/: CMakeLists.txt  PlayerExample.cpp~  empty.cfg~  f2_fl_implement.cc~  readme  simple.world~  simplec.cfg  simplec.cfg~  simplec.world  test  test.cc~  test.cpp  test.cpp~
playrstge/GoTo&SetTo/: test  test.cpp
playrstge/avoidnc/: test  test.cpp
playrstge/avoidtwo/: test  test.cpp~
playrstge/circlform/: test  test.cpp
playrstge/finalprogram/: f2_fl_implement.cc
playrstge/firstprgm/: CMakeLists.txt  aruco_simple.cpp~  how to run  test  test.cpp  test.cpp~
playrstge/fix2/: player simple3.cfg  test  test.cpp~
playrstge/fix3/: player simple3.cfg  test  test.cpp
playrstge/fixddistnce/: test  test.cpp
playrstge/follow/: test  test.cpp~
playrstge/follow2/: test.cpp~
playrstge/movtotargt/: test  test.cpp~
playrstge/newworlds/: camera.cfg~  camera.world~  simple.cfg  simple.world~  simple2.cfg  simple2.world~  simple3.cfg  simple3.world  simplec.world
playrstge/track/: test.cpp~
playrstge/twobots/: test  test.cpp~
progm/: ahow to run these codes~  eclipse_command.txt  hello.c  oldlogcamera.yml
progm/aprxpoly/: main.cpp~
progm/areaperim/: Untitled Document  main.cpp
progm/areapnkylw/: main.cpp
progm/areapnkylw2/: main.cpp
progm/artificial-caliberation/: CMakeLists.txt  camera_calibration.cpp
progm/caliberation/: CMakeLists.txt  calibration.cpp~
progm/caliberation(logitech)/: readme  readme~
progm/caliberation(newlogtch)/: camera.yml
progm/caliberation(webcam)/: CMakeLists.txt~
progm/circlecenter/: main.cpp  main.cpp~
progm/colord/: .cproject  .project  main.cpp
progm/contrast/: main.cpp  main.cpp~
progm/copyimage/: main.cpp  main.cpp~
progm/dup/: Untitled Document  main.cpp~
progm/dupvid/: main.cpp
progm/edge/: CMakeLists.txt~  main.cpp~  main.c~
progm/erosdilatn/: main.cpp
progm/houghlinep/: main.cpp
progm/intersectpoint/: main.cpp~
progm/redcode/: .cproject  .project  main.cpp  main.cpp~  main.c~
progm/resize/: main.cpp  (+1 more)
(+8 files in other folders)
